plugins {
    id 'java'
    id 'groovy'
    id 'idea'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.refridge'
version = '0.0.1-SNAPSHOT'
description = 'core_server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

sourceSets {
    test {
        groovy {
            srcDirs = ['src/test/groovy']
        }
    }
}

idea {
    module {
        // Gradle 기본 annotation processor 출력 경로를 IntelliJ가 인식하도록 설정
        def generatedDir = file("build/generated/sources/annotationProcessor/java/main")
        sourceDirs += generatedDir
        generatedSourceDirs += generatedDir
    }
}

dependencies {
    // Lombok 사용 시 (필수)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MapStruct
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // QueryDSL - com.querydsl 5.1.0 + jakarta classifier
    // ※ CVE-2024-49203: orderBy에 사용자 입력을 PathBuilder.get()으로 직접 전달하지 않으면 영향 없음
    //   만약 orderBy에 사용자 입력을 사용한다면, 반드시 화이트리스트 검증 필요
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

    // BOM으로 버전 관리
    implementation(platform("me.paulschwarz:spring-dotenv-bom:5.1.0"))

    // Spring Boot 4 전용 아티팩트, 로컬 개발 전용
    developmentOnly("me.paulschwarz:springboot4-dotenv")

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.apache.groovy:groovy'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // Apache Commons CSV (CSV 파싱)
    implementation("org.apache.commons:commons-csv:1.14.1")

    // Aho-Corasick 알고리즘 (비식재료 필터, 식재료 사전 매칭)
    implementation 'org.ahocorasick:ahocorasick:0.6.3'

    // Spock Framework
    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'

    // H2 Database (MySQL 호환 모드)
    implementation 'com.h2database:h2'

    // Groovy (Spock에 필요)
    testImplementation 'org.apache.groovy:groovy:4.0.15'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '-Amapstruct.defaultComponentModel=spring',
            '-Amapstruct.unmappedTargetPolicy=IGNORE',
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}